# asmshell

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  __main__.py  pyproject.toml
asmshell/: __init__.py  __main__.py  assemble.py  assembler.py  commands.py  config.py  display.py  emulate.py  emulator.py  memory.py  registers.py  repl.py  shell.py  typing.py  utils.py
asmshell/scripts/: test.py
asmshell/tests/: test_config.py  test_emulator.py  test_memory.py  test_registers.py  test_utils.py
