[tool.poetry]
name = "asmshell"
version = "0.1.0"
description = ""
authors = ["Charles Paulet <valkheim@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
keystone-engine = "^0.9.2"
unicorn = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
